--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^16.1.5",
     "@angular/platform-browser-dynamic": "^16.1.5",
     "@angular/router": "^16.1.5",
+    "@auth0/auth0-angular": "^2.2.0",
     "@capacitor/app": "4.1.1",
     "@capacitor/core": "4.7.3",
     "@capacitor/geolocation": "^4.1.0",
@@ -37,24 +38,23 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
-    "@angular-eslint/builder": "^15.0.0",
-    "@angular-eslint/eslint-plugin": "^15.0.0",
-    "@angular-eslint/eslint-plugin-template": "^15.0.0",
-    "@angular-eslint/schematics": "^15.0.0",
-    "@angular-eslint/template-parser": "^15.0.0",
+    "@angular-eslint/builder": "^16.1.0",
+    "@angular-eslint/eslint-plugin": "^16.1.0",
+    "@angular-eslint/eslint-plugin-template": "^16.1.0",
+    "@angular-eslint/schematics": "^16.1.0",
+    "@angular-eslint/template-parser": "^16.1.0",
     "@angular/cli": "^16.1.4",
     "@angular/compiler": "^16.1.5",
     "@angular/compiler-cli": "^16.1.5",
     "@angular/language-service": "^16.1.5",
-    "@capacitor/cli": "4.7.3",
+    "@capacitor/cli": "^4.8.1",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "5.3.0",
-    "@typescript-eslint/parser": "5.3.0",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "eslint": "^8.45.0",
+    "eslint-plugin-import": "2.27.5",
     "eslint-plugin-prefer-arrow": "1.2.2",
     "jasmine-core": "~4.3.0",
     "jasmine-spec-reporter": "~5.0.0",
