--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ionic/angular": "^7.1.2",
     "@types/geojson": "^7946.0.10",
     "@types/mapbox-gl": "^2.7.14",
+    "date-fns": "^3.3.1",
     "ionicons": "^7.0.0",
     "mapbox-gl": "^2.15.0",
     "rxjs": "~7.5.0",
