--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "geobox",
-  "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "name": "RealmWalker",
+  "version": "0.2.0",
+  "author": "Alice Carlsson",
+  "homepage": "https://realmwalker.app/",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -20,13 +20,13 @@
     "@angular/platform-browser-dynamic": "^16.1.5",
     "@angular/router": "^16.1.5",
     "@auth0/auth0-angular": "^2.2.0",
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.7.3",
-    "@capacitor/geolocation": "^4.1.0",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/ios": "4.7.3",
-    "@capacitor/keyboard": "4.1.1",
-    "@capacitor/status-bar": "4.1.1",
+    "@capacitor/app": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/geolocation": "^5.0.0",
+    "@capacitor/haptics": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
+    "@capacitor/keyboard": "^5.0.0",
+    "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.1.2",
     "@types/geojson": "^7946.0.10",
     "@types/mapbox-gl": "^2.7.14",
@@ -48,7 +48,7 @@
     "@angular/compiler": "^16.1.5",
     "@angular/compiler-cli": "^16.1.5",
     "@angular/language-service": "^16.1.5",
-    "@capacitor/cli": "^4.8.1",
+    "@capacitor/cli": "^5.0.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^12.11.1",
