--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Key files (e.g. local ssl certificates used for development)
+**/*.pem
+**/*.cert
