--- a/angular.json
+++ b/angular.json
@@ -72,6 +72,11 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "ssl": true,
+            "sslKey": "./localhost+4-key.pem",
+            "sslCert": "./localhost+4.pem"
+          },
           "configurations": {
             "production": {
               "browserTarget": "app:build:production"
