--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser-dynamic": "^16.1.5",
     "@angular/router": "^16.1.5",
     "@auth0/auth0-angular": "^2.2.0",
+    "@auth0/auth0-spa-js": "^2.1.3",
+    "@capacitor/android": "^5.7.4",
     "@capacitor/app": "^5.0.0",
+    "@capacitor/browser": "^5.2.0",
     "@capacitor/core": "^5.0.0",
     "@capacitor/geolocation": "^5.0.0",
     "@capacitor/haptics": "^5.0.0",
