--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/status-bar": "^5.0.0",
     "@ionic/angular": "^7.1.2",
     "@types/geojson": "^7946.0.10",
+    "@types/gtag.js": "^0.0.19",
     "@types/mapbox-gl": "^2.7.14",
     "date-fns": "^3.3.1",
     "ionicons": "^7.0.0",
