--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^16.1.5",
     "@auth0/auth0-angular": "^2.2.0",
     "@auth0/auth0-spa-js": "^2.1.3",
+    "@capacitor-community/native-audio": "^6.0.0",
     "@capacitor/android": "^6.0.0",
     "@capacitor/app": "^6.0.0",
     "@capacitor/browser": "^6.0.0",
